Introduction Work and Setup

--- a/Intro_WorkFlow_Setup/Intro_to_Jupyter_Notebooks.ipynb
+++ b/Intro_WorkFlow_Setup/Intro_to_Jupyter_Notebooks.ipynb
@@ -57,6 +57,7 @@
     "\n",
     "\n",
     "2.  Find something that all of you enjoy for fun. Insert a related picture or meme below.\n",
+    "<img src=\"pic.jpg\">\n",
     "\n",
     "3.  Everyone decide your comfort level on a scale of 1-10 in python, and your favorite colors from [this](https://matplotlib.org/stable/gallery/color/named_colors.html) list.\n",
     "\n",
@@ -69,8 +70,8 @@
    "metadata": {
     "id": "group_info-py",
     "ExecuteTime": {
-     "end_time": "2024-09-23T16:33:17.735529Z",
-     "start_time": "2024-09-23T16:33:17.731124Z"
+     "end_time": "2024-09-23T17:10:43.186407Z",
+     "start_time": "2024-09-23T17:10:43.182409Z"
     }
    },
    "source": [
@@ -83,7 +84,7 @@
    ],
    "id": "group_info-py",
    "outputs": [],
-   "execution_count": 5
+   "execution_count": 7
   },
   {
    "cell_type": "markdown",
