--- a/Practice_Activities/Practice_Activity_2.1/Titanic_Wrangling.ipynb
+++ b/Practice_Activities/Practice_Activity_2.1/Titanic_Wrangling.ipynb
@@ -20,7 +20,7 @@
    "cell_type": "raw",
    "source": [
     "---\n",
-    "title: 'Lab 1: Gapminder Data Visualization'\n",
+    "title: 'Titanic Data Wrangling'\n",
     "author: 'Isabella McCarty'\n",
     "embed-resources: true\n",
     "format: \n",
