--- a/Practice_Activities/Practice_Activity_1.2/PA_errors_python.ipynb
+++ b/Practice_Activities/Practice_Activity_1.2/PA_errors_python.ipynb
@@ -9,7 +9,10 @@
     "---\n",
     "title: 'Practice Activity: Basic Syntax'\n",
     "author: 'Isabella McCarty'\n",
-    "output: html\n",
+    "embed-resources: true\n",
+    "format: \n",
+    "    html:\n",
+    "        theme: minty\n",
     "---"
    ]
   },
@@ -43,8 +46,8 @@
    "metadata": {
     "id": "D5pSzgxjrrqq",
     "ExecuteTime": {
-     "end_time": "2024-09-25T19:15:16.683344Z",
-     "start_time": "2024-09-25T19:15:16.680240Z"
+     "end_time": "2024-09-30T19:15:38.869822Z",
+     "start_time": "2024-09-30T19:15:38.866106Z"
     }
    },
    "source": [
@@ -52,7 +55,7 @@
     "# len(my_thing)"
    ],
    "outputs": [],
-   "execution_count": 1497
+   "execution_count": 1
   },
   {
    "cell_type": "markdown",
@@ -80,8 +83,8 @@
      "height": 143
     },
     "ExecuteTime": {
-     "end_time": "2024-09-25T19:15:16.714234Z",
-     "start_time": "2024-09-25T19:15:16.710120Z"
+     "end_time": "2024-09-30T19:15:38.880715Z",
+     "start_time": "2024-09-30T19:15:38.874830Z"
     }
    },
    "source": [
@@ -92,7 +95,7 @@
     "punctuation = [\".\", \",\", \"!\", \"?\", \"'\", '\"', \"(\", \")\", \" \", \"-\", \";\", \":\"]"
    ],
    "outputs": [],
-   "execution_count": 1498
+   "execution_count": 2
   },
   {
    "cell_type": "markdown",
@@ -108,8 +111,8 @@
    "metadata": {
     "id": "l8ZVLLXWrrqs",
     "ExecuteTime": {
-     "end_time": "2024-09-25T19:15:16.737358Z",
-     "start_time": "2024-09-25T19:15:16.732003Z"
+     "end_time": "2024-09-30T19:15:39.035030Z",
+     "start_time": "2024-09-30T19:15:39.027705Z"
     }
    },
    "source": [
@@ -124,12 +127,12 @@
        "3"
       ]
      },
-     "execution_count": 1499,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 1499
+   "execution_count": 3
   },
   {
    "cell_type": "markdown",
@@ -145,8 +148,8 @@
    "metadata": {
     "id": "x9YyIMP6rrqt",
     "ExecuteTime": {
-     "end_time": "2024-09-25T19:15:16.782743Z",
-     "start_time": "2024-09-25T19:15:16.777791Z"
+     "end_time": "2024-09-30T19:15:39.140452Z",
+     "start_time": "2024-09-30T19:15:39.055453Z"
     }
    },
    "source": [
@@ -162,7 +165,7 @@
     "all_symbols = np.concatenate((lower_case, upper_case, punctuation))"
    ],
    "outputs": [],
-   "execution_count": 1500
+   "execution_count": 4
   },
   {
    "cell_type": "markdown",
@@ -178,8 +181,8 @@
    "metadata": {
     "id": "K103ZvNVrrqu",
     "ExecuteTime": {
-     "end_time": "2024-09-25T19:15:16.808800Z",
-     "start_time": "2024-09-25T19:15:16.800693Z"
+     "end_time": "2024-09-30T19:15:39.567712Z",
+     "start_time": "2024-09-30T19:15:39.151297Z"
     }
    },
    "source": [
@@ -282,12 +285,12 @@
        "</div>"
       ]
      },
-     "execution_count": 1501,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 1501
+   "execution_count": 5
   },
   {
    "cell_type": "markdown",
@@ -303,8 +306,8 @@
    "metadata": {
     "id": "iP7Zj5hPrrqu",
     "ExecuteTime": {
-     "end_time": "2024-09-25T19:15:18.545679Z",
-     "start_time": "2024-09-25T19:15:16.848407Z"
+     "end_time": "2024-09-30T19:15:40.904821Z",
+     "start_time": "2024-09-30T19:15:39.589738Z"
     }
    },
    "source": [
@@ -313,7 +316,7 @@
     "top_secret = top_secret[0].to_numpy()"
    ],
    "outputs": [],
-   "execution_count": 1502
+   "execution_count": 6
   },
   {
    "cell_type": "markdown",
@@ -336,8 +339,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-25T19:15:18.569103Z",
-     "start_time": "2024-09-25T19:15:18.566240Z"
+     "end_time": "2024-09-30T19:15:40.929390Z",
+     "start_time": "2024-09-30T19:15:40.926653Z"
     }
    },
    "cell_type": "code",
@@ -356,7 +359,7 @@
     "top_secret = np.square(top_secret)"
    ],
    "outputs": [],
-   "execution_count": 1503
+   "execution_count": 7
   },
   {
    "metadata": {},
@@ -369,8 +372,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-25T19:15:18.589459Z",
-     "start_time": "2024-09-25T19:15:18.586127Z"
+     "end_time": "2024-09-30T19:15:40.950226Z",
+     "start_time": "2024-09-30T19:15:40.946234Z"
     }
    },
    "cell_type": "code",
@@ -387,7 +390,7 @@
      ]
     }
    ],
-   "execution_count": 1504
+   "execution_count": 8
   },
   {
    "metadata": {},
@@ -406,8 +409,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-25T19:15:18.610595Z",
-     "start_time": "2024-09-25T19:15:18.606591Z"
+     "end_time": "2024-09-30T19:15:40.998348Z",
+     "start_time": "2024-09-30T19:15:40.994845Z"
     }
    },
    "cell_type": "code",
@@ -431,7 +434,7 @@
     "top_secret = top_secret_matrix.flatten(order='F')"
    ],
    "outputs": [],
-   "execution_count": 1505
+   "execution_count": 9
   },
   {
    "metadata": {},
@@ -441,8 +444,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-25T19:15:18.649949Z",
-     "start_time": "2024-09-25T19:15:18.645512Z"
+     "end_time": "2024-09-30T19:15:41.027736Z",
+     "start_time": "2024-09-30T19:15:41.023336Z"
     }
    },
    "cell_type": "code",
@@ -459,7 +462,7 @@
      ]
     }
    ],
-   "execution_count": 1506
+   "execution_count": 10
   },
   {
    "metadata": {},
@@ -475,8 +478,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-25T19:15:18.700575Z",
-     "start_time": "2024-09-25T19:15:18.696473Z"
+     "end_time": "2024-09-30T19:15:41.079647Z",
+     "start_time": "2024-09-30T19:15:41.075190Z"
     }
    },
    "cell_type": "code",
@@ -491,7 +494,7 @@
     "top_secret[top_secret == 39] = 20"
    ],
    "outputs": [],
-   "execution_count": 1507
+   "execution_count": 11
   },
   {
    "metadata": {},
@@ -504,8 +507,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-25T19:15:18.722436Z",
-     "start_time": "2024-09-25T19:15:18.718389Z"
+     "end_time": "2024-09-30T19:15:41.099548Z",
+     "start_time": "2024-09-30T19:15:41.095022Z"
     }
    },
    "cell_type": "code",
@@ -522,7 +525,7 @@
      ]
     }
    ],
-   "execution_count": 1508
+   "execution_count": 12
   },
   {
    "metadata": {
@@ -540,8 +543,8 @@
    "metadata": {
     "id": "v_bB8VNvrrqu",
     "ExecuteTime": {
-     "end_time": "2024-09-25T19:15:18.765133Z",
-     "start_time": "2024-09-25T19:15:18.759875Z"
+     "end_time": "2024-09-30T19:15:41.140369Z",
+     "start_time": "2024-09-30T19:15:41.135020Z"
     }
    },
    "cell_type": "code",
@@ -553,12 +556,12 @@
        "'\\'Twas brillig, and the slithy toves   Did gyre and gimble in the wabe: All mimsy were the borogoves,   And the mome raths outgrabe. \"Beware the Jabberwock, my son!   The jaws that bite, the claws that catch! Beware the Jubjub bird, and shun   The frumious Bandersnatch!\" He took his vorpal sword in hand;   Long time the manxome foe he sought- So rested he by the Tumtum tree   And stood awhile in thought. And, as in uffish thought he stood,   The Jabberwock, with eyes of flame, Came whiffling through the tulgey wood,   And burbled as it came! One, two! One, two! And through and through   The vorpal blade went snicker-snack! He left it dead, and with its head   He went galumphing back. \"And hast thou slain the Jabberwock?   Come to my arms, my beamish boy! O frabjous day! Callooh! Callay!\"   He chortled in his joy. \\'Twas brillig, and the slithy toves   Did gyre and gimble in the wabe: All mimsy were the borogoves,   And the mome raths outgrabe.'"
       ]
      },
-     "execution_count": 1509,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 1509
+   "execution_count": 13
   }
  ],
  "metadata": {
