--- a/Practice_Activities/Practice_Activity_2.1/Titanic_Wrangling.ipynb
+++ b/Practice_Activities/Practice_Activity_2.1/Titanic_Wrangling.ipynb
@@ -624,11 +624,11 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "Pros:\n",
+    "Pros-\n",
     "\n",
     "The stacked bar chart makes it easier for us to see the relative proportions of each class within each embarkation location, visually. This is especially useful when comparing across categories without needing to interpret numbers directly, and allows us to quickly draw quick conclusions like \"No 3rd class passengers embarked from Belfast\". \n",
     "\n",
-    "Cons:\n",
+    "Cons-\n",
     "\n",
     "With this barplot, we can't directly extract precise values, so it's less useful when exact numeric answers are required for the kinds of conditional probability questions we addressed before. Also, there is not a way to know how this plot was calculated, as I could have made a similar plot with the conditional distribution of embarkation location given their class."
    ]
