Updating YAML with code_folding

--- a/Practice_Activities/Practice_Activity_1.2/PA_errors_python.ipynb
+++ b/Practice_Activities/Practice_Activity_1.2/PA_errors_python.ipynb
@@ -12,6 +12,7 @@
     "embed-resources: true\n",
     "format: \n",
     "    html:\n",
+    "        code-fold: true\n",
     "        theme: minty\n",
     "---"
    ]
