--- a/Practice_Activities/Practice_Activity_2.1/Titanic_Wrangling.ipynb
+++ b/Practice_Activities/Practice_Activity_2.1/Titanic_Wrangling.ipynb
@@ -25,6 +25,7 @@
     "embed-resources: true\n",
     "format: \n",
     "    html:\n",
+    "        code-fold: true\n",
     "        theme: minty\n",
     "---"
    ]
