--- a/Practice_Activities/Practice_Activity_2.2/PA_wrangle.ipynb
+++ b/Practice_Activities/Practice_Activity_2.2/PA_wrangle.ipynb
@@ -10,6 +10,7 @@
     "embed-resources: true\n",
     "format: \n",
     "    html:\n",
+    "        code-fold: true\n",
     "        theme: minty\n",
     "---"
    ]
@@ -864,7 +865,7 @@
    },
    "source": [
     "colleges_clean['TUITION_DIFF'] = colleges_clean[\"TUITIONFEE_OUT\"] - colleges_clean[\"TUITIONFEE_IN\"]\n",
-    "colleges_clean"
+    "colleges_clean.head()"
    ],
    "outputs": [
     {
