--- a/Labs/Lab01/Lab01.ipynb
+++ b/Labs/Lab01/Lab01.ipynb
@@ -10,6 +10,7 @@
     "embed-resources: true\n",
     "format: \n",
     "    html:\n",
+    "        code-fold: true\n",
     "        theme: minty\n",
     "---"
    ],
