Updating YAML with code_folding

--- a/Practice_Activities/Practice_Activity_1.3/Introduction_to_Data_Viz_Using_mtcars_Dataset.ipynb
+++ b/Practice_Activities/Practice_Activity_1.3/Introduction_to_Data_Viz_Using_mtcars_Dataset.ipynb
@@ -16,6 +16,21 @@
  },
  "cells": [
   {
+   "metadata": {},
+   "cell_type": "raw",
+   "source": [
+    "---\n",
+    "title: 'Practice Activity: Data Visualization with Plotnine'\n",
+    "author: 'Isabella McCarty'\n",
+    "embed-resources: true\n",
+    "format: \n",
+    "    html:\n",
+    "        code-fold: true\n",
+    "        theme: minty\n",
+    "---"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "source": [
     "# Data Visualization Using `plotnine`\n",
