Lab01 Task 2 Finished

--- a/Labs/Lab01/Lab01.ipynb
+++ b/Labs/Lab01/Lab01.ipynb
@@ -623,10 +623,7 @@
    },
    "cell_type": "code",
    "source": [
-    "from plotnine import facet_wrap\n",
-    "\n",
-    "line_plot_facet = (\n",
-    "    ggplot(q2data, aes(x='exports', y='imports', color='energy', group='four_regions')) +\n",
+    "(ggplot(q2data, aes(x='exports', y='imports', color='energy', group='four_regions')) +\n",
     "    geom_line(size=1.5) +  # Line plot with lines grouped by region\n",
     "    scale_color_gradient(low=\"lightblue\", high=\"darkblue\", name=\"Energy Use\") +  # Color gradient for energy use\n",
     "    labs(\n",
@@ -637,9 +634,7 @@
     "    facet_wrap('~four_regions') +  # Facet by region to get individual plots for each region\n",
     "    theme_linedraw() +\n",
     "    theme(legend_position='right')\n",
-    ")\n",
-    "\n",
-    "print(line_plot_facet)\n"
+    ")"
    ],
    "id": "2bbd0d1acc6a9c6",
    "outputs": [
