--- a/Labs/Lab02/Lab02.ipynb
+++ b/Labs/Lab02/Lab02.ipynb
@@ -2,6 +2,22 @@
  "cells": [
   {
    "metadata": {},
+   "cell_type": "raw",
+   "source": [
+    "---\n",
+    "title: 'Lab 2: Avocado Prices'\n",
+    "author: 'Isabella McCarty'\n",
+    "embed-resources: true\n",
+    "format: \n",
+    "    html:\n",
+    "        code-fold: true\n",
+    "        theme: minty\n",
+    "---"
+   ],
+   "id": "ac731c8a9b1d3ed3"
+  },
+  {
+   "metadata": {},
    "cell_type": "markdown",
    "source": "# Lab 2: Avocado Prices",
    "id": "2879b5496f9dff0e"
