--- a/Practice_Activities/Practice_Activity_2.2/PA_wrangle.ipynb
+++ b/Practice_Activities/Practice_Activity_2.2/PA_wrangle.ipynb
@@ -77,8 +77,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-30T20:19:00.872836Z",
-     "start_time": "2024-09-30T20:19:00.867795Z"
+     "end_time": "2024-10-02T17:56:22.041926Z",
+     "start_time": "2024-10-02T17:56:21.599655Z"
     }
    },
    "source": [
@@ -87,14 +87,14 @@
     "from tomlkit import float_"
    ],
    "outputs": [],
-   "execution_count": 456
+   "execution_count": 1
   },
   {
    "metadata": {
     "id": "9asR0S4_eiRA",
     "ExecuteTime": {
-     "end_time": "2024-09-30T20:19:02.670976Z",
-     "start_time": "2024-09-30T20:19:00.919762Z"
+     "end_time": "2024-10-02T17:56:24.359737Z",
+     "start_time": "2024-10-02T17:56:22.052932Z"
     }
    },
    "cell_type": "code",
@@ -312,12 +312,12 @@
        "</div>"
       ]
      },
-     "execution_count": 457,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 457
+   "execution_count": 2
   },
   {
    "cell_type": "markdown",
@@ -348,8 +348,8 @@
    "metadata": {
     "id": "1QZE0D5TeiRC",
     "ExecuteTime": {
-     "end_time": "2024-09-30T20:19:02.765615Z",
-     "start_time": "2024-09-30T20:19:02.747711Z"
+     "end_time": "2024-10-02T17:56:24.523875Z",
+     "start_time": "2024-10-02T17:56:24.513814Z"
     }
    },
    "source": [
@@ -482,12 +482,12 @@
        "</div>"
       ]
      },
-     "execution_count": 458,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 458
+   "execution_count": 3
   },
   {
    "cell_type": "markdown",
@@ -505,8 +505,8 @@
    "metadata": {
     "id": "E7Xx6YsKeiRC",
     "ExecuteTime": {
-     "end_time": "2024-09-30T20:19:02.900319Z",
-     "start_time": "2024-09-30T20:19:02.882255Z"
+     "end_time": "2024-10-02T17:56:24.577909Z",
+     "start_time": "2024-10-02T17:56:24.565476Z"
     }
    },
    "source": [
@@ -639,12 +639,12 @@
        "</div>"
       ]
      },
-     "execution_count": 459,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 459
+   "execution_count": 4
   },
   {
    "cell_type": "markdown",
@@ -664,8 +664,8 @@
    "metadata": {
     "id": "cIOpSHCjeiRC",
     "ExecuteTime": {
-     "end_time": "2024-09-30T20:19:03.129076Z",
-     "start_time": "2024-09-30T20:19:03.108448Z"
+     "end_time": "2024-10-02T17:56:24.778175Z",
+     "start_time": "2024-10-02T17:56:24.767581Z"
     }
    },
    "source": [
@@ -805,12 +805,12 @@
        "</div>"
       ]
      },
-     "execution_count": 460,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 460
+   "execution_count": 5
   },
   {
    "cell_type": "markdown",
@@ -832,8 +832,8 @@
    "metadata": {
     "id": "TFBmCHMLeiRD",
     "ExecuteTime": {
-     "end_time": "2024-09-30T20:19:03.371529Z",
-     "start_time": "2024-09-30T20:19:03.366291Z"
+     "end_time": "2024-10-02T17:56:24.961978Z",
+     "start_time": "2024-10-02T17:56:24.956423Z"
     }
    },
    "source": [
@@ -841,7 +841,7 @@
     "colleges_clean['REGION'] = colleges_clean['REGION'].astype('category')"
    ],
    "outputs": [],
-   "execution_count": 461
+   "execution_count": 6
   },
   {
    "cell_type": "markdown",
@@ -859,8 +859,8 @@
    "metadata": {
     "id": "i3gRwBgbeiRD",
     "ExecuteTime": {
-     "end_time": "2024-09-30T20:19:03.550624Z",
-     "start_time": "2024-09-30T20:19:03.534294Z"
+     "end_time": "2024-10-02T17:56:25.226530Z",
+     "start_time": "2024-10-02T17:56:25.216887Z"
     }
    },
    "source": [
@@ -871,46 +871,26 @@
     {
      "data": {
       "text/plain": [
-       "                                                 INSTNM              CITY  \\\n",
-       "0                              Alabama A & M University            Normal   \n",
-       "1                   University of Alabama at Birmingham        Birmingham   \n",
-       "2                                    Amridge University        Montgomery   \n",
-       "3                   University of Alabama in Huntsville        Huntsville   \n",
-       "4                              Alabama State University        Montgomery   \n",
-       "...                                                 ...               ...   \n",
-       "7050                 Arizona State University at Tucson            Tucson   \n",
-       "7051  Arizona State University - ASU Colleges at Lak...  Lake Havasu City   \n",
-       "7052        Arizona State University at The Gila Valley          Thatcher   \n",
-       "7053                   Arizona State University at Yuma              Yuma   \n",
-       "7056                                       BCI - Malden            Malden   \n",
+       "                                INSTNM        CITY STABBR         ZIP CONTROL  \\\n",
+       "0             Alabama A & M University      Normal     AL       35762       1   \n",
+       "1  University of Alabama at Birmingham  Birmingham     AL  35294-0110       1   \n",
+       "2                   Amridge University  Montgomery     AL  36117-3553       2   \n",
+       "3  University of Alabama in Huntsville  Huntsville     AL       35899       1   \n",
+       "4             Alabama State University  Montgomery     AL  36104-0271       1   \n",
        "\n",
-       "     STABBR         ZIP CONTROL  ADM_RATE  SAT_AVG  TUITIONFEE_IN  \\\n",
-       "0        AL       35762       1    0.9027    929.0         9857.0   \n",
-       "1        AL  35294-0110       1    0.9181   1195.0         8328.0   \n",
-       "2        AL  36117-3553       2       NaN      NaN         6900.0   \n",
-       "3        AL       35899       1    0.8123   1322.0        10280.0   \n",
-       "4        AL  36104-0271       1    0.9787    935.0        11068.0   \n",
-       "...     ...         ...     ...       ...      ...            ...   \n",
-       "7050     AZ   857454284       1       NaN      NaN            NaN   \n",
-       "7051     AZ   864036877       1       NaN      NaN         6904.0   \n",
-       "7052     AZ   855525545       1       NaN      NaN            NaN   \n",
-       "7053     AZ   853656900       1       NaN      NaN            NaN   \n",
-       "7056     MA    21480000       2       NaN      NaN            NaN   \n",
+       "   ADM_RATE  SAT_AVG  TUITIONFEE_IN  TUITIONFEE_OUT     UGDS REGION  \\\n",
+       "0    0.9027    929.0         9857.0         18236.0   4824.0      5   \n",
+       "1    0.9181   1195.0         8328.0         19032.0  12866.0      5   \n",
+       "2       NaN      NaN         6900.0          6900.0    322.0      5   \n",
+       "3    0.8123   1322.0        10280.0         21480.0   6917.0      5   \n",
+       "4    0.9787    935.0        11068.0         19396.0   4189.0      5   \n",
        "\n",
-       "      TUITIONFEE_OUT     UGDS REGION  TUITION_DIFF  \n",
-       "0            18236.0   4824.0      5        8379.0  \n",
-       "1            19032.0  12866.0      5       10704.0  \n",
-       "2             6900.0    322.0      5           0.0  \n",
-       "3            21480.0   6917.0      5       11200.0  \n",
-       "4            19396.0   4189.0      5        8328.0  \n",
-       "...              ...      ...    ...           ...  \n",
-       "7050             NaN      NaN      6           NaN  \n",
-       "7051         10106.0      NaN      6        3202.0  \n",
-       "7052             NaN      NaN      6           NaN  \n",
-       "7053             NaN      NaN      6           NaN  \n",
-       "7056             NaN      NaN      1           NaN  \n",
-       "\n",
-       "[4089 rows x 12 columns]"
+       "   TUITION_DIFF  \n",
+       "0        8379.0  \n",
+       "1       10704.0  \n",
+       "2           0.0  \n",
+       "3       11200.0  \n",
+       "4        8328.0  "
       ],
       "text/html": [
        "<div>\n",
@@ -1021,108 +1001,17 @@
        "      <td>5</td>\n",
        "      <td>8328.0</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7050</th>\n",
-       "      <td>Arizona State University at Tucson</td>\n",
-       "      <td>Tucson</td>\n",
-       "      <td>AZ</td>\n",
-       "      <td>857454284</td>\n",
-       "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>6</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7051</th>\n",
-       "      <td>Arizona State University - ASU Colleges at Lak...</td>\n",
-       "      <td>Lake Havasu City</td>\n",
-       "      <td>AZ</td>\n",
-       "      <td>864036877</td>\n",
-       "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>6904.0</td>\n",
-       "      <td>10106.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>6</td>\n",
-       "      <td>3202.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7052</th>\n",
-       "      <td>Arizona State University at The Gila Valley</td>\n",
-       "      <td>Thatcher</td>\n",
-       "      <td>AZ</td>\n",
-       "      <td>855525545</td>\n",
-       "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>6</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7053</th>\n",
-       "      <td>Arizona State University at Yuma</td>\n",
-       "      <td>Yuma</td>\n",
-       "      <td>AZ</td>\n",
-       "      <td>853656900</td>\n",
-       "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>6</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7056</th>\n",
-       "      <td>BCI - Malden</td>\n",
-       "      <td>Malden</td>\n",
-       "      <td>MA</td>\n",
-       "      <td>21480000</td>\n",
-       "      <td>2</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>4089 rows × 12 columns</p>\n",
        "</div>"
       ]
      },
-     "execution_count": 462,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 462
+   "execution_count": 7
   },
   {
    "cell_type": "markdown",
@@ -1142,8 +1031,8 @@
    "metadata": {
     "id": "520ghDYBeiRD",
     "ExecuteTime": {
-     "end_time": "2024-09-30T20:19:03.710663Z",
-     "start_time": "2024-09-30T20:19:03.691743Z"
+     "end_time": "2024-10-02T17:56:25.377136Z",
+     "start_time": "2024-10-02T17:56:25.366087Z"
     }
    },
    "source": [
@@ -1289,12 +1178,12 @@
        "</div>"
       ]
      },
-     "execution_count": 463,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 463
+   "execution_count": 8
   },
   {
    "cell_type": "markdown",
@@ -1328,27 +1217,26 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-30T20:19:03.909409Z",
-     "start_time": "2024-09-30T20:19:03.902925Z"
+     "end_time": "2024-10-02T17:56:25.593260Z",
+     "start_time": "2024-10-02T17:56:25.588825Z"
     }
    },
    "cell_type": "code",
    "source": "mystery_college  = colleges_clean.copy()",
    "outputs": [],
-   "execution_count": 464
+   "execution_count": 9
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-30T20:19:04.081747Z",
-     "start_time": "2024-09-30T20:19:04.065759Z"
+     "end_time": "2024-10-02T17:56:25.803452Z",
+     "start_time": "2024-10-02T17:56:25.791749Z"
     }
    },
    "cell_type": "code",
    "source": [
     "# College is located in Region 1\n",
     "mystery_college = mystery_college[mystery_college['REGION'] == 1]\n",
-    "mystery_college.head()\n",
     "\n",
     "# College's Admission Rate is in Q1 for the region\n",
     "first_quartile_adm_rate = mystery_college['ADM_RATE'].quantile(0.25)\n",
@@ -1376,7 +1264,8 @@
      "data": {
       "text/plain": [
        "                INSTNM  TUITIONFEE_IN\n",
-       "1619  Williams College        53550.0"
+       "1619  Williams College        53550.0\n",
+       "1500   Amherst College        54310.0"
       ],
       "text/html": [
        "<div>\n",
@@ -1407,17 +1296,22 @@
        "      <td>Williams College</td>\n",
        "      <td>53550.0</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1500</th>\n",
+       "      <td>Amherst College</td>\n",
+       "      <td>54310.0</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ]
      },
-     "execution_count": 465,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 465
+   "execution_count": 10
   }
  ],
  "metadata": {
