--- a/Practice_Activities/Practice_Activity_2.2/PA_wrangle.ipynb
+++ b/Practice_Activities/Practice_Activity_2.2/PA_wrangle.ipynb
@@ -77,8 +77,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-02T17:56:22.041926Z",
-     "start_time": "2024-10-02T17:56:21.599655Z"
+     "end_time": "2024-10-02T18:00:16.923306Z",
+     "start_time": "2024-10-02T18:00:16.919524Z"
     }
    },
    "source": [
@@ -87,14 +87,14 @@
     "from tomlkit import float_"
    ],
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 11
   },
   {
    "metadata": {
     "id": "9asR0S4_eiRA",
     "ExecuteTime": {
-     "end_time": "2024-10-02T17:56:24.359737Z",
-     "start_time": "2024-10-02T17:56:22.052932Z"
+     "end_time": "2024-10-02T18:00:19.088167Z",
+     "start_time": "2024-10-02T18:00:16.943934Z"
     }
    },
    "cell_type": "code",
@@ -312,12 +312,12 @@
        "</div>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 2
+   "execution_count": 12
   },
   {
    "cell_type": "markdown",
@@ -348,8 +348,8 @@
    "metadata": {
     "id": "1QZE0D5TeiRC",
     "ExecuteTime": {
-     "end_time": "2024-10-02T17:56:24.523875Z",
-     "start_time": "2024-10-02T17:56:24.513814Z"
+     "end_time": "2024-10-02T18:00:19.140223Z",
+     "start_time": "2024-10-02T18:00:19.131104Z"
     }
    },
    "source": [
@@ -482,12 +482,12 @@
        "</div>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 3
+   "execution_count": 13
   },
   {
    "cell_type": "markdown",
@@ -505,8 +505,8 @@
    "metadata": {
     "id": "E7Xx6YsKeiRC",
     "ExecuteTime": {
-     "end_time": "2024-10-02T17:56:24.577909Z",
-     "start_time": "2024-10-02T17:56:24.565476Z"
+     "end_time": "2024-10-02T18:00:19.279765Z",
+     "start_time": "2024-10-02T18:00:19.269478Z"
     }
    },
    "source": [
@@ -639,12 +639,12 @@
        "</div>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 4
+   "execution_count": 14
   },
   {
    "cell_type": "markdown",
@@ -664,8 +664,8 @@
    "metadata": {
     "id": "cIOpSHCjeiRC",
     "ExecuteTime": {
-     "end_time": "2024-10-02T17:56:24.778175Z",
-     "start_time": "2024-10-02T17:56:24.767581Z"
+     "end_time": "2024-10-02T18:00:19.488902Z",
+     "start_time": "2024-10-02T18:00:19.479290Z"
     }
    },
    "source": [
@@ -805,12 +805,12 @@
        "</div>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 5
+   "execution_count": 15
   },
   {
    "cell_type": "markdown",
@@ -832,8 +832,8 @@
    "metadata": {
     "id": "TFBmCHMLeiRD",
     "ExecuteTime": {
-     "end_time": "2024-10-02T17:56:24.961978Z",
-     "start_time": "2024-10-02T17:56:24.956423Z"
+     "end_time": "2024-10-02T18:00:19.692327Z",
+     "start_time": "2024-10-02T18:00:19.685832Z"
     }
    },
    "source": [
@@ -841,7 +841,7 @@
     "colleges_clean['REGION'] = colleges_clean['REGION'].astype('category')"
    ],
    "outputs": [],
-   "execution_count": 6
+   "execution_count": 16
   },
   {
    "cell_type": "markdown",
@@ -859,8 +859,8 @@
    "metadata": {
     "id": "i3gRwBgbeiRD",
     "ExecuteTime": {
-     "end_time": "2024-10-02T17:56:25.226530Z",
-     "start_time": "2024-10-02T17:56:25.216887Z"
+     "end_time": "2024-10-02T18:00:19.850887Z",
+     "start_time": "2024-10-02T18:00:19.839534Z"
     }
    },
    "source": [
@@ -1006,12 +1006,12 @@
        "</div>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 7
+   "execution_count": 17
   },
   {
    "cell_type": "markdown",
@@ -1031,8 +1031,8 @@
    "metadata": {
     "id": "520ghDYBeiRD",
     "ExecuteTime": {
-     "end_time": "2024-10-02T17:56:25.377136Z",
-     "start_time": "2024-10-02T17:56:25.366087Z"
+     "end_time": "2024-10-02T18:00:20.038406Z",
+     "start_time": "2024-10-02T18:00:20.025184Z"
     }
    },
    "source": [
@@ -1178,12 +1178,12 @@
        "</div>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 8
+   "execution_count": 18
   },
   {
    "cell_type": "markdown",
@@ -1217,20 +1217,20 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-02T17:56:25.593260Z",
-     "start_time": "2024-10-02T17:56:25.588825Z"
+     "end_time": "2024-10-02T18:00:20.152845Z",
+     "start_time": "2024-10-02T18:00:20.148183Z"
     }
    },
    "cell_type": "code",
    "source": "mystery_college  = colleges_clean.copy()",
    "outputs": [],
-   "execution_count": 9
+   "execution_count": 19
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-02T17:56:25.803452Z",
-     "start_time": "2024-10-02T17:56:25.791749Z"
+     "end_time": "2024-10-02T18:00:20.317190Z",
+     "start_time": "2024-10-02T18:00:20.305104Z"
     }
    },
    "cell_type": "code",
@@ -1264,8 +1264,7 @@
      "data": {
       "text/plain": [
        "                INSTNM  TUITIONFEE_IN\n",
-       "1619  Williams College        53550.0\n",
-       "1500   Amherst College        54310.0"
+       "1619  Williams College        53550.0"
       ],
       "text/html": [
        "<div>\n",
@@ -1296,22 +1295,17 @@
        "      <td>Williams College</td>\n",
        "      <td>53550.0</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1500</th>\n",
-       "      <td>Amherst College</td>\n",
-       "      <td>54310.0</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 10
+   "execution_count": 20
   }
  ],
  "metadata": {
