--- a/Labs/Lab02/Lab02.ipynb
+++ b/Labs/Lab02/Lab02.ipynb
@@ -20,7 +20,7 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "Data Set-up\n",
+    "## Data Set-up\n",
     "---\n",
     "In this lab we’re going to be looking at avocado prices.\n",
     "\n",
