--- a/Labs/Lab02/Lab02.ipynb
+++ b/Labs/Lab02/Lab02.ipynb
@@ -67,8 +67,7 @@
    "cell_type": "code",
    "source": [
     "# Importing the Data\n",
-    "avocados = pd.read_csv('Data/avocado-updated-2020.csv')\n",
-    "avocados['geography'].value_counts()"
+    "avocados = pd.read_csv('Data/avocado-updated-2020.csv')"
    ],
    "id": "3c42b7143b53f46b",
    "outputs": [
