--- a/Labs/Lab02/Lab02.ipynb
+++ b/Labs/Lab02/Lab02.ipynb
@@ -38,9 +38,8 @@
   },
   {
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-10-08T04:23:31.313670Z",
-     "start_time": "2024-10-08T04:23:31.309787Z"
+    "jupyter": {
+     "is_executing": true
     }
    },
    "cell_type": "code",
@@ -55,7 +54,7 @@
    ],
    "id": "6139590ab7bcb9fc",
    "outputs": [],
-   "execution_count": 528
+   "execution_count": null
   },
   {
    "metadata": {
